<resources>
    <string name="app_name">Metronom</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="bpm_n">BPM:\n30</string>
    <string name="bpm">BPM:</string>
    <string name="_30">30</string>
    <string name="slash">/</string>
    <string name="wycisz_na">Wycisz na:</string>
    <string name="co_ka_de">co każde:</string>
    <string name="ok">OK</string>
    <string name="glosnosc">Głośność</string>
    <string name="tryb">Tryb</string>
</resources>
