<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:background="@color/black"
    tools:context=".Activities.OptionsActivity"
    tools:deviceIds="wear">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_boxedEdges="all"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0sp"
                android:gravity="top"
                android:text="@string/bpm"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:id="@+id/description1_options_activity"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-6sp"
                android:layout_below="@+id/description1_options_activity"
                android:id="@+id/bpm_value_buttons_options_activity">

                <ImageButton
                    android:id="@+id/minus_BPM_button"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:background="@drawable/square_blue"
                    android:src="@drawable/ic_minus_24"
                    android:onClick="onClickMinusButton"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/bpm_view"
                    android:layout_width="60sp"
                    android:layout_height="40sp"
                    android:layout_marginLeft="13sp"
                    android:layout_marginRight="13sp"
                    android:gravity="center"
                    android:text="@string/_30"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <ImageButton
                    android:id="@+id/plus_BPM_button"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:background="@drawable/square_blue"
                    android:src="@drawable/ic_plus_24"
                    android:onClick="onClickPlusButton"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/seekbar_options_activity"
                android:layout_width="140dp"
                android:layout_height="61dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0sp"
                android:layout_below="@id/bpm_value_buttons_options_activity"
                android:max="240"
                android:min="30" />

            <ImageView
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-12sp"
                android:layout_below="@id/seekbar_options_activity"
                android:id="@+id/image1_options_activity"
                android:src="@drawable/ic_baseline_music_note_24"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/metrum_settings_options_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/image1_options_activity"
                android:layout_marginTop="10sp">

                <Spinner
                    android:id="@+id/meter_1_spinner"
                    android:layout_width="80sp"
                    android:layout_height="45sp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/slash"
                    android:textSize="35sp" />

                <Spinner
                    android:id="@+id/meter_2_spinner"
                    android:layout_width="80sp"
                    android:layout_height="45sp"
                    android:background="@color/black" />

            </LinearLayout>

            <ImageView
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:layout_below="@id/metrum_settings_options_activity"
                android:id="@+id/image2_options_activity"
                android:src="@drawable/ic_baseline_volume_off_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/description2_options_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image2_options_activity"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5sp"
                android:text="@string/wycisz_na"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/how_long_silent_spinner_options_activity"
                android:layout_width="80sp"
                android:layout_height="45sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0sp"
                android:layout_below="@id/description2_options_activity"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0sp"
                android:layout_below="@id/how_long_silent_spinner_options_activity"
                android:text="@string/co_ka_de"
                android:textSize="20sp"
                android:id="@+id/description3_options_activity"/>

            <Spinner
                android:id="@+id/period_silent_spinner"
                android:layout_width="80sp"
                android:layout_height="45sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0sp"
                android:layout_below="@id/description3_options_activity"
                android:background="@color/black" />

            <Button
                android:id="@+id/ok_options_button"
                android:layout_width="90sp"
                android:layout_height="60sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp"
                android:layout_below="@id/period_silent_spinner"
                android:layout_marginBottom="20sp"
                android:background="@drawable/square_blue"
                android:text="@string/ok"
                android:textSize="15sp"
                android:onClick="onClickSaveButton"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>